2004-08-13  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/javalocale, src/gnu/ldml: New LDML parser and GNU Classpath
	locale generator.

2004-08-11  C. Brian Jones <cbj@gnu.org>

	* src/gnu/bytecode: updated classes from Kawa 20040811

2004-08-02  C. Brian Jones <cbj@gnu.org>

	* src/gnu/classpath/tools/JavahMain.java: formatted
	* src/gnu/classpath/tools/JavapMain.java: ditto
	* src/gnu/classpath/tools/SerialVer.java: ditto
	* src/gnu/classpath/tools/Util.java: ditto
	* src/gnu/classpath/tools/Javap.java: renamed to Javaph.java
	and formatted with imports cleaned up
	* src/gnu/classpath/tools/README: fixed a few typos
	
2002-12-19  C. Brian Jones <cbj@gnu.org>

	* src/gnu/bytecode/README: point to Kawa for canonical version of 
	the gnu.bytecode package.

2002-12-18  C. Brian Jones <cbj@gnu.org>

	* src/gnu/bytecode/InnerClassesAttr.java (getClassNames): new 
	method allows other programs to get inner class names and their 
	proper access string.
	* src/gnu/bytecode/Variable.java (getOffset): new method allows 
	program to determine slot in LocalVariableTable.
	* src/gnu/bytecode/Variable.java (getStartPC): new method allows 
	program to determine the pc value for a variable.
	* src/gnu/bytecode/Variable.java (getEndPC): new method allows 
	program to determine the length of a variable
	* build.xml: new file

2002-12-17  C. Brian Jones <cbj@gnu.org>

	* gnu/classpath/tools/*: moved to src/gnu/classpath/tools/
	* src/gnu/classpath/tools/: new directory
	* src/gnu/bytecode: import of gnu.bytecode from Kawa 1.6.99